--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -24,6 +24,68 @@
       "low": "low"
     }
   },
+  "start": {
+    "header": {
+      "home": "Головна",
+      "about": "Про нас",
+      "contacts": "Контакти",
+      "support": "Підтримка"
+    },
+    "login": "Увійти",
+    "register": "Зареєструватися",
+    "motivation": "Мотивуйте себе",
+    "achieveGoals": "Досягнення своїх цілей",
+    "description": "Настав час розважатися під час виконання завдань! Приєднуйтесь до TrackTopias!",
+    "learnMore": "Дізнатися більше"
+  },
+  "login": {
+    "title": "Вхід",
+    "subtitle": "Ласкаво просимо! Введіть ваші дані для входу.",
+    "username": "Нікнейм",
+    "password": "Пароль",
+    "signIn": "Увійти",
+    "noAccount": "Немає облікового запису?",
+    "registerNow": "Зареєструватися зараз",
+    "error": {
+      "title": "Помилка входу",
+      "defaultMessage": "Помилка входу. Будь ласка, спробуйте пізніше.",
+      "usernameRequired": "Нікнейм обов'язковий",
+      "passwordRequired": "Пароль обов'язковий"
+    }
+  },
+  "register": {
+    "title": "Створити аккаунт",
+    "subtitle": "Створіть новий обліковий запис для відстеження вашого прогресу",
+    "username": "Нікнейм",
+    "email": "Email",
+    "password": "Пароль",
+    "confirmPassword": "Підтвердження паролю",
+    "signUp": "Зареєструватися",
+    "alreadyHaveAccount": "Вже є обліковий запис?",
+    "signIn": "Увійти",
+    "weak": "Слабкий",
+    "medium": "Середній",
+    "strong": "Сильний",
+    "enterPassword": "Введіть пароль",
+    "success": {
+      "title": "Успішна реєстрація",
+      "message": "Ви успішно зареєструвалися. Тепер ви можете увійти."
+    },
+    "error": {
+      "title": "Помилка реєстрації",
+      "defaultMessage": "Помилка реєстрації. Будь ласка, спробуйте пізніше.",
+      "usernameRequired": "Нікнейм обов'язковий",
+      "usernameLength": "Нікнейм має бути від 1 до 20 символів",
+      "usernameFormat": "Дозволені лише літери, цифри, дефіс та нижнє підкреслення",
+      "usernameProhibited": "Цей нікнейм містить заборонене слово",
+      "emailRequired": "Email обов'язковий",
+      "emailInvalid": "Введіть правильний email",
+      "passwordRequired": "Пароль обов'язковий",
+      "passwordLength": "Пароль має містити мінімум 8 символів",
+      "confirmRequired": "Підтвердження паролю обов'язкове",
+      "passwordMismatch": "Паролі не співпадають"
+    }
+  },
   "tasks": {
     "missions": "Завдання",
     "habits": "Звички",
