--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -36,7 +36,44 @@
     "motivation": "Мотивуйте себе",
     "achieveGoals": "Досягнення своїх цілей",
     "description": "Настав час розважатися під час виконання завдань! Приєднуйтесь до TrackTopias!",
-    "learnMore": "Дізнатися більше"
+    "learnMore": "Дізнатися більше",
+    "about": {
+      "trackHabits": "Відстежуйте свої звички",
+      "trackHabitsDesc": "Відстежуйте регулярні звички для формування корисної поведінки",
+      "dailyTracking": "Щоденне відстеження та нагадування",
+      "progressVisualization": "Візуалізація прогресу та аналітика",
+      "manageTopics": "Управляйте своїми темами",
+      "manageTopicsDesc": "Організуйте свої завдання та звички за темами для кращої систематизації",
+      "completeTasks": "Виконуйте завдання та підвищуйте рівень",
+      "socialFeatures": "Змагайтесь з друзями"
+    },
+    "features": {
+      "title": "Функції додатку",
+      "taskManagement": "Управління завданнями",
+      "taskManagementDesc": "Створюйте, редагуйте та відстежуйте свої щоденні завдання з різними пріоритетами",
+      "habitTracking": "Відстеження звичок",
+      "habitTrackingDesc": "Формуйте позитивні звички через регулярне відстеження та аналіз серій виконання",
+      "statistics": "Детальна статистика",
+      "statisticsDesc": "Перегляд вашого прогресу з графіками та рейтингами у порівнянні з іншими користувачами"
+    },
+    "contacts": {
+      "getInTouch": "Зв'яжіться з нами",
+      "reachOut": "У вас є запитання чи пропозиції? Не соромтеся звертатися до нас!",
+      "followUs": "Слідкуйте за нами"
+    },
+    "support": {
+      "faq": "Часті запитання",
+      "question1": "Як почати користуватися TrackTopias?",
+      "answer1": "Просто зареєструйтесь, увійдіть у систему та почніть створювати свої завдання та звички!",
+      "question2": "Чи є мобільна версія додатку?",
+      "answer2": "Так, ми працюємо над мобільними додатками для Android та iOS, які скоро будуть доступні.",
+      "question3": "Чи можна експортувати дані прогресу?",
+      "answer3": "Так, у вашому профілі є можливість експортувати дані у різних форматах.",
+      "contactSupport": "Зв'язатися з підтримкою"
+    },
+    "footer": {
+      "copyright": "Всі права захищені"
+    }
   },
   "login": {
     "title": "Вхід",
