--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -348,5 +348,23 @@
       "loadHabitStreakRatings": "Не вдалося завантажити рейтинг за стріками звичок",
       "loadHabitCompletionRatings": "Не вдалося завантажити рейтинг за виконанням звичок"
     }
+  },
+  "photo": {
+    "uploadTitle": "Завантажити фото профілю",
+    "selectPrompt": "Оберіть фото профілю для завантаження",
+    "sizeLimit": "Максимальний розмір файлу: 5МБ",
+    "chooseButton": "Обрати",
+    "uploadButton": "Завантажити",
+    "cancelButton": "Скасувати",
+    "success": {
+      "title": "Успіх",
+      "message": "Фото профілю успішно завантажено"
+    },
+    "error": {
+      "title": "Помилка",
+      "loading": "Не вдалося завантажити фото профілю",
+      "fileSize": "Розмір файлу перевищує ліміт у 5МБ",
+      "upload": "Не вдалося завантажити фото профілю"
+    }
   }
 }
